[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opeb-full-valuation"
version = "3.0.0"
description = "Shackleford Precision GASB 75 OPEB Valuation Engine - Scientific actuarial calculations"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Joseph Shackelford", email = "actuarial@example.com"}]
keywords = [
    "GASB 75", "OPEB", "actuarial", "valuation", "Entry Age Normal",
    "pension", "retiree benefits", "healthcare", "mortality",
    "Pub-2010", "MP-2021", "competing risks", "MDT"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
polars = [
    "polars>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/risky-scout/opeb-full-valuation"
Documentation = "https://github.com/risky-scout/opeb-full-valuation#readme"
Repository = "https://github.com/risky-scout/opeb-full-valuation"
Issues = "https://github.com/risky-scout/opeb-full-valuation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
