[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opeb-full-valuation"
version = "2.0.0"
description = "Production GASB 75 OPEB Full Valuation Engine - Actuarial precision calculations"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Actuarial Pipeline Project"}]
keywords = ["GASB 75", "OPEB", "actuarial", "valuation", "Entry Age Normal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = ["pandas>=2.0.0", "numpy>=1.24.0", "openpyxl>=3.1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
